<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('tugas_panitia', function (Blueprint $table) {
            $table->id();
            $table->foreignId('divisi_id')->constrained('divisi_panitia')->cascadeOnDelete();
            $table->foreignId('user_id')->constrained('users');
            $table->string('deskripsi_tugas', 255);
            $table->enum('status', ['belum', 'sedang', 'selesai'])->default('belum');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('tugas_panitia');
    }
};
